change test case

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,15 +1,16 @@
 {
-    "version": "0.2.0",
-    "configurations": [
-      {
-        "name": "gdb-test",
-        "type": "cppdbg",
-        "request": "launch",
-        "program": "${workspaceFolder}/mtDNNTest/dist/${fileBasenameNoExtension}.out",
-        "args": [],
-        "stopAtEntry": false,
-        "cwd": "${fileDirname}",
-        "environment": [{
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "cpp debug",
+      "type": "cppdbg",
+      "request": "launch",
+      "program": "${workspaceFolder}/mtDNNTest/dist/${fileBasenameNoExtension}.out",
+      "args": [],
+      "stopAtEntry": false,
+      "cwd": "${fileDirname}",
+      "environment": [
+        {
           "name": "MTDNN_PLATFORM_NAME",
           "value": "NVIDIA CUDA"
         },
@@ -18,17 +19,24 @@
           "value": "/home/bingcheng.zhou/project/mtDNN/build"
         },
       ],
-        "externalConsole": false,
-        "MIMode": "gdb",
-        "setupCommands": [
-          {
-            "description": "为 gdb 启用整齐打印",
-            "text": "-enable-pretty-printing",
-            "ignoreFailures": true
-          }
-        ],
-        "preLaunchTask": "build debug",
-        "miDebuggerPath": "/usr/bin/gdb"
-      }
-    ]
-  }
+      "externalConsole": false,
+      "MIMode": "gdb",
+      "setupCommands": [
+        {
+          "description": "为 gdb 启用整齐打印",
+          "text": "-enable-pretty-printing",
+          "ignoreFailures": true
+        }
+      ],
+      "preLaunchTask": "build debug",
+      "miDebuggerPath": "/usr/bin/gdb"
+    },
+    {
+      "name": "Python debug",
+      "type": "python",
+      "request": "launch",
+      "program": "${file}",
+      "console": "integratedTerminal"
+    },
+  ]
+}
